# FlightGaze

./: README.md  build.gradle  settings.gradle
blacklist/: build.gradle
blacklist/src/androidTest/java/com/xwlab/blacklist/: ExampleInstrumentedTest.java
blacklist/src/main/: AndroidManifest.xml
blacklist/src/main/cpp/: face_jni.cpp  native-lib.cpp
blacklist/src/main/java/com/xwlab/blacklist/: Face.java  FaceDatabase.java  HttpUtils.java  KeyPersonnel.java  MyApplication.java  SettingActivity.java  WorkActivity.java
blacklist/src/main/java/com/xwlab/util/: PermissionUtil.java  utils.java
blacklist/src/main/res/layout/: activity_setting.xml  activity_work.xml
blacklist/src/main/res/values/: strings.xml
blacklist/src/test/java/com/xwlab/blacklist/: ExampleUnitTest.java
flightgaze/: build.gradle
flightgaze/src/androidTest/java/com/xwlab/flightgaze/: ExampleInstrumentedTest.java
flightgaze/src/main/: AndroidManifest.xml
flightgaze/src/main/cpp/: CMakeLists.txt  face_jni.cpp
flightgaze/src/main/java/com/xwlab/flightgaze/: DbHelper.java  Face.java  FaceDatabase.java  FlightGazeApplication.java  HttpUtils.java  (+3 more)
flightgaze/src/main/res/layout/: activity_setting.xml  activity_work.xml
flightgaze/src/main/res/values/: strings.xml  themes.xml
flightglasses/: build.gradle
flightglasses/src/main/: AndroidManifest.xml
flightglasses/src/main/res/layout/: activity_work.xml
flightglasses/src/main/res/values/: strings.xml
flightglasses/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
uvccamerasdk/: build.gradle
(+5 files in other folders)
